--- a/assets/base.css
+++ b/assets/base.css
@@ -1315,6 +1315,7 @@ button.shopify-payment-button__button--unbranded {
   font-family: var(--button-font-family-primary);
   text-transform: var(--button-text-case-primary);
   border-radius: var(--style-border-radius-buttons-primary);
+  padding: 0.5rem 2rem;
 }
 
 .button:not(.button-secondary, .button-unstyled) {
