--- a/snippets/theme-styles-variables.liquid
+++ b/snippets/theme-styles-variables.liquid
@@ -469,8 +469,8 @@
     --button-size-sm: 30px;
     --button-size-md: 36px;
     --button-size: var(--minimum-touch-target);
-    --button-padding-inline:  8px 28px;
-    --button-padding-block:  8px 28px;
+    --button-padding-inline:  20px;
+    --button-padding-block:  20px;
 
     /* Button font-family */
     --button-font-family-primary: var(--font-{{ settings.type_font_button_primary }}--family);
