add fixed buy buttons

--- a/blocks/buy-buttons-fixed.liquid
+++ b/blocks/buy-buttons-fixed.liquid
@@ -492,7 +492,7 @@
 
 {% schema %}
 {
-  "name": "Mobile Buy Buttons",
+  "name": "t:names.product_mobile_buy_buttons",
   "tag": null,
   "settings": [
     {
@@ -568,7 +568,7 @@
   ],
   "presets": [
     {
-      "name": "t:names.product_buy_buttons",
+      "name": "t:names.product_mobile_buy_buttons",
       "category": "t:categories.product",
       "blocks": {
         "quantity": {
