add fixed buy buttons

--- a/blocks/mobile-buy-buttons.liquid
+++ b/blocks/mobile-buy-buttons.liquid
@@ -1,4 +1,3 @@
-
 {% liquid
   assign block_settings = block.settings
   assign product = closest.product
@@ -38,7 +37,7 @@
 %}
 
 <span
-  class="buy-buttons-block buy-buttons-block--{{ block.id }}"
+  class="buy-buttons-block buy-buttons-block--{{ block.id }} mobile-buy-buttons"
   {{ block.shopify_attributes }}
 >
   {%- if product != blank -%}
@@ -158,117 +157,6 @@
     </div>
   {%- endif -%}
 </span>
-
-{% if block_settings.show_pickup_availability %}
-  <script
-    src="{{ 'local-pickup.js' | asset_url }}"
-    type="module"
-  ></script>
-
-  {%- assign pick_up_availabilities = closest.product.selected_or_first_available_variant.store_availabilities
-    | where: 'pick_up_enabled', true
-  -%}
-
-  <local-pickup
-    class="spacing-style product__pickup-availabilities"
-    {% if pick_up_availabilities.size == 0 %}
-      hidden
-    {% endif %}
-    data-section-id="{{ section.id }}"
-    data-product-url="{{ closest.product.url }}"
-    data-variant-id="{{ closest.product.selected_or_first_available_variant.id }}"
-    style="{% render 'spacing-style', settings: block_settings %}"
-    ref="localPickupButton"
-  >
-    {% if can_add_to_cart %}
-      <dialog-component>
-        <div class="pickup-availability__row">
-          <div class="pickup-availability__column">
-            <span class="svg-wrapper">
-              {% if pick_up_availabilities.first.available %}
-                {{- 'icon-available.svg' | inline_asset_content -}}
-              {% else %}
-                {{- 'icon-unavailable.svg' | inline_asset_content -}}
-              {% endif %}
-            </span>
-          </div>
-          <div class="pickup-availability__column">
-            {% if pick_up_availabilities.first.available %}
-              <p class="pickup-location__text-sm">
-                {{ 'content.pickup_available_at_html' | t: location: pick_up_availabilities.first.location.name }}
-              </p>
-              <p class="pickup-location__text-xs">
-                {{ 'content.pickup_ready_in' | t: pickup_time: pick_up_availabilities.first.pick_up_time }}
-              </p>
-            {% else %}
-              <p class="pickup-location__text-sm">
-                {{ 'content.pickup_not_available' | t }}
-              </p>
-            {% endif %}
-            <button
-              on:click="/showDialog"
-              class="button-unstyled pickup-location__button"
-            >
-              {{ 'actions.view_store_information' | t }}
-            </button>
-          </div>
-        </div>
-        <dialog
-          ref="dialog"
-          class="dialog-modal dialog-drawer pickup-location__dialog color-{{ settings.drawer_color_scheme }}"
-          scroll-lock
-          aria-labelledby="pickup-dialog-heading"
-        >
-          <h2
-            id="pickup-dialog-heading"
-            class="visually-hidden"
-          >
-            {{ 'actions.view_store_information' | t }}
-          </h2>
-          <div class="pickup-availability__dialog-row pickup-availability__header-container">
-            <div class="pickup-availability__column">
-              <h4 class="pickup-location__h4">{{ closest.product.title }}</h4>
-              <p class="pickup-location__text-sm">
-                {{ closest.product.selected_or_first_available_variant.title }}
-              </p>
-            </div>
-            <button
-              ref="closeButton"
-              on:click="/closeDialog"
-              class="button button-unstyled close-button pickup-location__close-button"
-              aria-label="{{ 'actions.close_dialog' | t }}"
-            >
-              <span class="svg-wrapper">
-                {{- 'icon-close.svg' | inline_asset_content -}}
-              </span>
-            </button>
-          </div>
-          {% for pick_up_availability in pick_up_availabilities %}
-            <div class="pickup-location__wrapper">
-              <p class="pickup-location__text-bold">{{ pick_up_availability.location.name }}</p>
-              <div class="pickup-location__address-wrapper">
-                <span class="pickup-location__availability-wrapper">
-                  {% if pick_up_availability.available %}
-                    {{- 'icon-available.svg' | inline_asset_content -}}
-                    {% assign pickup_time = pick_up_availability.pick_up_time | downcase %}
-                    {{ 'content.pickup_available_in' | t: pickup_time: pickup_time }}
-                  {% else %}
-                    {{- 'icon-unavailable.svg' | inline_asset_content -}}
-                    {{ 'content.pickup_not_available' | t }}
-                  {% endif %}
-                </span>
-                <address class="pickup-location__address">
-                  {{ pick_up_availability.location.address | format_address }}
-                  {{ pick_up_availability.location.address.phone }}
-                </address>
-              </div>
-            </div>
-          {% endfor %}
-        </dialog>
-      </dialog-component>
-    {% endif %}
-  </local-pickup>
-{% endif %}
 
 {% stylesheet %}
   .buy-buttons-block {
@@ -487,6 +375,21 @@
   .pickup-location__close-button {
     top: calc(var(--padding-2xl) - (var(--icon-size-xs) / 2));
     right: calc(var(--padding-2xl) - var(--icon-size-xs));
+  }
+  .mobile-buy-buttons {
+    display: hidden;
+  }
+  /* mobile */
+  @media screen and (max-width: 749px) {
+    .buy-buttons-block {
+      display: block;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      z-index: 50;
+      background: var(--color-background, #fff);
+    }
   }
 {% endstylesheet %}
 
