--- a/blocks/mobile-buy-buttons.liquid
+++ b/blocks/mobile-buy-buttons.liquid
@@ -381,7 +381,7 @@
   }
   /* mobile */
   @media screen and (max-width: 749px) {
-    .mobile-buy-buttons-block {
+    .mobile-buy-buttons {
       display: block;
       position: fixed;
       bottom: 0;
