add fixed buy buttons

--- a/blocks/mobile-buy-buttons.liquid
+++ b/blocks/mobile-buy-buttons.liquid
@@ -377,7 +377,7 @@
     right: calc(var(--padding-2xl) - var(--icon-size-xs));
   }
   .mobile-buy-buttons {
-    display: hidden;
+    display: hidden !important;
   }
   /* mobile */
   @media screen and (max-width: 749px) {
