--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -56,12 +56,12 @@
           {% if form.errors %}
             open
           {% endif %}
-          aria-labelledby="password-dialog-heading"
+          aria-labelledby="password-heading"
         >
-          <div class="password-dialog__content">
+          <div class="password__content">
             <h2
-              id="password-dialog-heading"
-              class="password-dialog__title h3"
+              id="password-heading"
+              class="password__title h3"
             >
               {{ 'actions.enter_password' | t }}
             </h2>
@@ -89,7 +89,7 @@
               >
 
               <button
-                class="button password-dialog__submit-button"
+                class="button password__submit-button"
                 type="submit"
               >
                 {{ 'actions.submit' | t }}
