--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -53,6 +53,7 @@
       {%- form 'storefront_password' -%}
         <div
           id="password-form"
+          class="password-form"
           {% if form.errors %}
             open
           {% endif %}
