--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -60,6 +60,12 @@
           aria-labelledby="password-heading"
         >
           <div class="password__content">
+            <h5
+              id="password-heading"
+              class="password__title h5"
+            >
+              Launching @ 11am CST
+            </h5>
             <h2
               id="password-heading"
               class="password__title h3"
