--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -64,7 +64,7 @@
               id="password-heading"
               class="password__title h5"
             >
-              Launching @ 11am CST
+              Launch → 11/11 @ 11:11 AM CST
             </h5>
             <h2
               id="password-heading"
