--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -5,7 +5,10 @@
 >
   <head>
     {%- render 'stylesheets' -%}
-
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"
+    >
     {%- if settings.favicon != blank -%}
       <link
         rel="icon"
