--- a/blocks/mobile-buy-buttons.liquid
+++ b/blocks/mobile-buy-buttons.liquid
@@ -382,7 +382,7 @@
   /* mobile */
   @media screen and (max-width: 949px) {
     .mobile-buy-buttons {
-      display: block;
+      display: block !important;
       position: fixed;
       bottom: 0;
       left: 0;
