--- a/snippets/variant-main-picker.liquid
+++ b/snippets/variant-main-picker.liquid
@@ -92,6 +92,7 @@
                   {% if product_option_value.variant.id %}
                     data-variant-id="{{ product_option_value.variant.id }}"
                   {% endif %}
+                   data-current-checked="false"
                 >
                 {% if variant_style == 'swatch' %}
                   {% liquid
