--- a/snippets/variant-main-picker.liquid
+++ b/snippets/variant-main-picker.liquid
@@ -92,7 +92,12 @@
                   {% if product_option_value.variant.id %}
                     data-variant-id="{{ product_option_value.variant.id }}"
                   {% endif %}
-                   data-current-checked="false"
+                  {% if product_option_value.selected %}
+                    data-current-checked="true"
+                    checked
+                  {% else %}
+                    data-current-checked="false"
+                  {% endif %}
                 >
                 {% if variant_style == 'swatch' %}
                   {% liquid
@@ -164,6 +169,9 @@
                     data-option-value-id="{{ product_option_value.id }}"
                     data-variant-id="{{ product_option_value.variant.id }}"
                     data-connected-product-url="{{ product_option_value.product_url }}"
+                    {% if product_option_value.selected %}
+                      selected="selected"
+                    {% endif %}
                   >
                     {% if product_option_value.available == false %}
                       {{ product_option_value | escape }} - {{ 'content.unavailable' | t }}
@@ -185,6 +193,8 @@
           </div>
         {%- endif -%}
       {%- endfor -%}
+
+     
     </form>
   </variant-picker>
 {% endunless %}
