--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -84,7 +84,7 @@
               {{ 'content.cart_title' | t }}
               {% render 'cart-bubble' %}
             </h2>
-            <h3>Must have 5 items in cart to unlock $100 credit *</h3>
+
             <button
               ref="closeButton"
               on:click="cart-drawer-component/close"
@@ -95,6 +95,10 @@
                 {{- 'icon-close.svg' | inline_asset_content -}}
               </span>
             </button>
+          </div>
+
+          <div>
+            <h5>Must have 5 items in cart to unlock $100 credit *</h5>
           </div>
 
           <div
