--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -97,7 +97,7 @@
             </button>
           </div>
 
-          <div>
+          <div class="cart-drawer__header">
             <h5>Must have 5 items in cart to unlock $100 credit *</h5>
           </div>
 
@@ -160,6 +160,26 @@
       padding: var(--cart-drawer-padding-desktop);
     }
   }
+
+    .cart-drawer__note {
+    background-color: var(--color-background);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: var(--cart-drawer-padding);
+    border-bottom: var(--style-border-width) solid none;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+
+    @media screen and (min-width: 750px) {
+      padding: var(--cart-drawer-padding-desktop);
+      padding-top: 0;
+      margin-bottom: 1rem;
+    }
+  }
+
 
   .cart-drawer__dialog {
     overflow: hidden;
