--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -97,7 +97,7 @@
             </button>
           </div>
 
-          <div class="cart-drawer__header">
+          <div class="cart-drawer__note">
             <h5>Must have 5 items in cart to unlock $100 credit *</h5>
           </div>
 
@@ -161,7 +161,7 @@
     }
   }
 
-    .cart-drawer__note {
+  .cart-drawer__note {
     background-color: var(--color-background);
     display: flex;
     align-items: center;
@@ -179,7 +179,6 @@
       margin-bottom: 1rem;
     }
   }
-
 
   .cart-drawer__dialog {
     overflow: hidden;
