--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -167,11 +167,12 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding: var(--cart-drawer-padding);
+    padding-top: 0;
     border-bottom: var(--style-border-width) solid none;
     position: sticky;
     top: 0;
     z-index: 1;
+    margin: 1rem 0;
 
     @media screen and (min-width: 750px) {
       padding: var(--cart-drawer-padding-desktop);
